--- a/web.html
+++ b/web.html
@@ -10,7 +10,7 @@
     <header>
       <div class="navbar">
         <span>HOME</span>
-        <span>ABOUt</span>
+        <span>ABOUT</span>
         <span>GALLERY</span>
         <span>BLOG</span>
         <input class="inp" type="text" placeholder="Search anything" />
